--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -304,6 +304,148 @@
                  </xpath>
              </field>
          </record>
+        <record id="purchase_request.view_purchase_request_search" model="ir.ui.view">
+            <field name="name">purchase.request.list.select</field>
+            <field name="model">purchase.request</field>
+            <field name="arch" type="xml">
+                <search string="Search Purchase Request">
+                    <field name="name" string="Purchase Request"/>
+                    <separator/>
+                    <field name="state"/>
+                    <filter name="unassigned" string="Unassigned"
+                            domain="[('assigned_to','=', False)]"
+                            help="Unassigned Request"/>
+                    <filter name="state_draft" string="Draft"
+                            domain="[('state','=','draft')]"
+                            help="Request is to be approved"/>
+                    <filter name="state_to_approve" string="To Approve"
+                            domain="[('state','=','to_approve')]"
+                            help="Request is to be approved"/>
+                    <filter name="state_approved" string="Approved"
+                            domain="[('state','=','approved')]"
+                            help="Request is approved"/>
+                    <filter name="state_rejected" string="Rejected"
+                            domain="[('state','=','rejected')]"
+                            help="Request is rejected"/>
+                    <filter string="Unread Messages"
+                            name="message_needaction"
+                            domain="[('message_needaction','=',True)]"/>
+                    <filter domain="[('assigned_to','=', uid)]"
+                            help="Assigned to me"/>
+                    <filter domain="[('requested_by','=', uid)]"
+                            help="My requests"/>
+                    <filter name= 'assigned_approve' domain="['|',('requested_by','=', uid),('assigned_to','=', uid)]"
+                            help="My Requests and My Approval"/>
+                    <field name="requested_by" />
+                    <field name="assigned_to" />
+                    <field name="picking_type_id"/>
+                    <separator/>
+                    <filter name="filter_month" icon="terp-go-month" string="This Month"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')),
+                            ('date_start','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <filter name="filter_year" icon="terp-go-year" string="This Year"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')),
+                            ('date_start','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <separator/>
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(months=0,day=1,days=-1)).strftime('%Y-%m-%d')),
+                            ('date_start','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
+                    <!-- Relativedelta required weeks, days and weekday -->
+                    <filter icon="terp-go-month" string="Previous Week"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')),
+                            ('date_start','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
+                    <separator/>
+                    <group expand="0" string="Group By...">
+                        <filter name="by_month" string="Month"
+                                context="{'group_by': 'date_start:month'}"/>
+                        <filter name="by_week" string="Week"
+                                context="{'group_by': 'date_start:week'}"/>
+                        <filter name="by_date" string="Date"
+                                context="{'group_by': 'date_start:day'}"/>
+                        <filter string="Requested by" icon="terp-personal"
+                                domain="[]"
+                                context="{'group_by':'requested_by'}"/>
+                        <filter string="Assigned to" icon="terp-personal"
+                                name="group_assigned_to"
+                                domain="[]"
+                                context="{'group_by':'assigned_to'}"/>
+                        <filter string="Source" icon="terp-gtk-jump-to-rtl" domain="[]" context="{'group_by':'origin'}"/>
+                        <filter string="Start Date" icon="terp-go-month" domain="[]" context="{'group_by':'date_start'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
+
+        <record id="purchase_request.purchase_request_line_search" model="ir.ui.view">
+            <field name="name">purchase.request.line.search</field>
+            <field name="model">purchase.request.line</field>
+            <field name="arch" type="xml">
+                <search string="Search Purchase Request">
+                    <field name="request_id"/>
+                    <field name="product_id"/>
+                    <field name="requested_by"/>
+                    <field name="assigned_to"/>
+                    <field name="date_start"/>
+                    <field name="date_required"/>
+                    <field name="analytic_account_id"/>
+                    <field name="procurement_id"/>
+                    <filter name="request_state_draft" string="Draft"
+                            domain="[('request_state','=','draft')]"
+                            help="Request is to be approved"/>
+                    <filter name="request_state_to_approve" string="To Approve"
+                            domain="[('request_state','=','to_approve')]"
+                            help="Request is to be approved"/>
+                    <filter name="request_state_approved" string="Approved"
+                            domain="[('request_state','=','approved')]"
+                            help="Request is approved"/>
+                    <filter name="request_state_rejected" string="Rejected"
+                            domain="[('request_state','=','rejected')]"
+                            help="Request is rejected"/>
+                    <filter domain="[('assigned_to','=', uid)]"
+                            help="Assigned to me"/>
+                    <filter domain="[('requested_by','=', uid)]"
+                            help="My requests"/>
+                    <separator/>
+                    <filter name="filter_month" icon="terp-go-month" string="This Month"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')),
+                            ('date_start','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <filter name="filter_year" icon="terp-go-year" string="This Year"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')),
+                            ('date_start','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <separator/>
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(months=0,day=1,days=-1)).strftime('%Y-%m-%d')),
+                            ('date_start','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
+                    <!-- Relativedelta required weeks, days and weekday -->
+                    <filter icon="terp-go-month" string="Previous Week"
+                            domain="[('date_start','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')),
+                            ('date_start','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
+                    <separator/>
+                    <group expand="0" string="Group By...">
+                        <filter name="by_month" string="Month"
+                                context="{'group_by': 'date_start:month'}"/>
+                        <filter name="by_week" string="Week"
+                                context="{'group_by': 'date_start:week'}"/>
+                        <filter name="by_date" string="Date"
+                                context="{'group_by': 'date_start:day'}"/>
+                        <filter string="Product"
+                                domain="[]" context="{'group_by' : 'product_id'}" />
+                        <filter string="Requested by"
+                                domain="[]"
+                                context="{'group_by':'requested_by'}"/>
+                        <filter string="Assigned to"
+                                domain="[]"
+                                context="{'group_by':'assigned_to'}"/>
+                        <filter string="Request status"
+                                domain="[]"
+                                context="{'group_by':'request_state'}"/>
+                        <filter string="Analytic Account"
+                                domain="[]"
+                                context="{'group_by':'analytic_account_id'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
 
         <record model="ir.actions.act_window" id="purchase_request.purchase_request_form_action">
             <field name="name">Purchase Requests</field>
@@ -323,6 +465,18 @@
               </p>
             </field>
         </record>
+
+        <menuitem
+            action="purchase_request.purchase_request_line_form_action"
+            id="menu_purchase_request_line"
+            parent="purchase.menu_procurement_management" sequence="16"/>
+
+        <menuitem
+            id="menu_purchase_request_line_act"
+            sequence="20"
+            parent="purchase_request.menu_purchase_request"
+            action="purchase_request.purchase_request_line_form_action"
+            />
 
 
 
