--- a/purchase_indonesia/views/inherit_purchase_tender.xml
+++ b/purchase_indonesia/views/inherit_purchase_tender.xml
@@ -218,7 +218,29 @@
                     <filter string="Unassigned"  domain="[('user_id','=', False)]" help="Unassigned  Requisition"/>
                     <!--<filter name="due_date" string="Due Date" domain="[('state','!=','done'),('schedule_date','&lt;',ordering_date)]"/>-->
                     <field name="user_id" />
+                    <separator/>
+                    <filter name="filter_month" icon="terp-go-month" string="This Month"
+                            domain="[('ordering_date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')),
+                            ('ordering_date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <filter name="filter_year" icon="terp-go-year" string="This Year"
+                            domain="[('ordering_date','&lt;=',(context_today()+relativedelta(day=31, month=12)).strftime('%%Y-%%m-%%d')),
+                            ('ordering_date','&gt;=',(context_today()-relativedelta(day=1, month=1)).strftime('%%Y-%%m-%%d'))]"/>
+                    <separator/>
+                    <filter icon="terp-go-month" string="Previous Month"
+                            domain="[('ordering_date','&lt;=',(context_today()+relativedelta(months=0,day=1,days=-1)).strftime('%Y-%m-%d')),
+                            ('ordering_date','&gt;=',(context_today()+relativedelta(months=-1,day=1)).strftime('%Y-%m-%d'))]"/>
+                    <!-- Relativedelta required weeks, days and weekday -->
+                    <filter icon="terp-go-month" string="Previous Week"
+                            domain="[('ordering_date','&lt;=',(context_today()+relativedelta(weeks=-2, days=7, weekday=6)).strftime('%Y-%m-%d')),
+                            ('ordering_date','&gt;=',(context_today()+relativedelta(weeks=-2, days=1, weekday=0)).strftime('%Y-%m-%d'))]"/>
+                    <separator/>
                     <group expand="0" string="Group By">
+                        <filter name="by_month" string="Month"
+                                context="{'group_by': 'ordering_date:month'}"/>
+                        <filter name="by_week" string="Week"
+                                context="{'group_by': 'ordering_date:week'}"/>
+                        <filter name="by_date" string="Date"
+                                context="{'group_by': 'ordering_date:day'}"/>
                         <filter string="Responsible" domain="[]" context="{'group_by':'user_id'}"/>
                         <filter string="Source" domain="[]" context="{'group_by':'origin'}"/>
                         <filter string="Status" domain="[]" context="{'group_by':'state'}"/>
