[ADD] purchase_indonesia : change position report progress pp from menu purchase to menu report purchase

--- a/purchase_indonesia/views/view_validate_tracking_purchase_order_invoice.xml
+++ b/purchase_indonesia/views/view_validate_tracking_purchase_order_invoice.xml
@@ -86,8 +86,9 @@
         </record>
 
         <menuitem id="menu_validate_tracking_purchase_order_invoice" name="Report Progress PP"
-            parent="purchase.menu_procurement_management"
+            parent="base.purchase_report"
             action="view_validate_tracking_purchase_order_invoice_action" sequence="22"/>
+
 
     </data>
 </openerp>
