--- a/hr_fingerprint_ams/views/report_action.xml
+++ b/hr_fingerprint_ams/views/report_action.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-
         <!--Paper Format-->
-        <record id="upkeep_fingerprint_paperformat_a4" model="report.paperformat">
+        <record id="paperformat_fingerprint_a4" model="report.paperformat">
             <field name="name">Upkeep Fingerprint A4 Portrait</field>
-            <field name="default" eval="True"/>
-            <field name="format">A4</field>
-            <field name="orientation">Portrait</field>
-            <field name="margin_top">15</field>
-            <field name="margin_bottom">15</field>
-            <field name="margin_left">10</field>
-            <field name="margin_right">10</field>
+            <field name="orientation">Landscape</field>
+            <field name="format">custom</field>
+            <field name="page_height">210</field>
+            <field name="page_width">297</field>
+            <field name="margin_top">10</field>
+            <field name="margin_bottom">5</field>
+            <field name="margin_left">5</field>
+            <field name="margin_right">5</field>
             <field name="header_line" eval="False"/>
             <field name="header_spacing">15</field>
             <field name="dpi">90</field>
         </record>
-        <!--/Paper Format-->
 
         <!--Upkeep Fingerprint Report Action-->
         <report
@@ -26,11 +25,12 @@
             report_type="qweb-pdf"
             name="hr_fingerprint_ams.report_upkeep_fingerprint"
             file="hr_fingerprint_ams.report_upkeep_fingerprint"
+            paperformat="paperformat_fingerprint_a4"
         />
         <!--/Upkeep Fingerprint Report Action-->
 
         <record id="upkeep_fingerprint_report_action" model="ir.actions.report.xml">
-            <field name="paperformat_id" ref="upkeep_fingerprint_paperformat_a4"/>
+            <field name="paperformat_id" ref="hr_fingerprint_ams.paperformat_fingerprint_a4"/>
         </record>
 
     </data>
